# twitter-clone-py

./: README.md  pyproject.toml
common/: models.py
config/: authentication.py  settings.py  urls.py
tweets/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
tweets/migrations/: 0001_initial.py  0002_initial.py  0003_alter_tweet_payload.py  0004_alter_like_tweet_alter_like_user_alter_tweet_user.py
tweets/templates/: all_tweets.html
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_name.py
